Fix squished monitoring icon in series index table

--- a/frontend/src/Series/Index/Table/SeriesStatusCell.css
+++ b/frontend/src/Series/Index/Table/SeriesStatusCell.css
@@ -5,6 +5,5 @@
 }
 
 .statusIcon {
-  width: 20px !important;
-  text-align: center;
+  margin: 0 3px;
 }
